[gd_scene load_steps=9 format=3 uid="uid://cfq20mntf8aru"]

[ext_resource type="Script" path="res://obstacles/cannon.gd" id="1_a47y2"]
[ext_resource type="Texture2D" uid="uid://cqd2p1uq12it" path="res://assets/Rocky Roads/Enemies/cannon.png" id="2_530wm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5x0ll"]
atlas = ExtResource("2_530wm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_grshk"]
atlas = ExtResource("2_530wm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n246f"]
atlas = ExtResource("2_530wm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0x6fj"]
atlas = ExtResource("2_530wm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bh4vt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x0ll")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.7,
"texture": SubResource("AtlasTexture_grshk")
}, {
"duration": 1.7,
"texture": SubResource("AtlasTexture_n246f")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_0x6fj")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_siqu5"]
size = Vector2(20, 16)

[node name="Cannon" type="StaticBody2D"]
script = ExtResource("1_a47y2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bh4vt")
animation = &"shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_siqu5")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-56, 5)
scale = Vector2(-1, 1)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
